<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="AxisInputs" Id="{b657be83-cdf7-43ac-b808-368fb04bf88d}">
    <Declaration><![CDATA[TYPE AxisInputs :
STRUCT
	PowerEnable		: BOOL;
	EnablePositive	: BOOL;
	EnableNegative  : BOOL;
	Override		: LREAL;
	BufferMode		: MC_BufferMode;
	Options			: ST_PowerOptions;
	
	ResetEnable		: BOOL;
	
	StopExecute			: BOOL;
	StopDeceleration	: LREAL;
	StopJerk			: LREAL;
	StopOptions			: ST_MoveOptions;
	
	
	JogForward		: BOOL;
	JogBackward		: BOOL;
	jogMode			: E_JogMode;
	JogPosition		: LREAL;
	JogVelocity		: LREAL;
	JogAcceleration : LREAL;
	JogDeceleration : LREAL;
	JogJerk			: LREAL;
	
	HaltExecute			: BOOL;
	HaltDeceleration	: LREAL;
	HaltJerk			: LREAL;
	HaltBufferMode		: MC_BufferMode;
	HaltOptions			: ST_MoveOptions;
	
	MoveAbsoluteExecute				: BOOL;
	MoveAbsolutePosition			: LREAL;
	MoveAbsoluteVelocity			: LREAL;
	MoveAbsoluteAcceleration		: LREAL;
	MoveAbsoluteDeceleration		: LREAL;
	MoveAbsoluteJerk				: LREAL;
	MoveAbsoluteBufferMode			: MC_BufferMode;
	MoveAbsoluteOptions				: ST_MoveOptions;
	
	MoveRelativeExecute				: BOOL;
	MoveRelativeDistance			: LREAL;
	MoveRelativeVelocity			: LREAL;
	MoveRelativeAcceleration		: LREAL;
	MoveRelativeDeceleration		: LREAL;
	MoveRelativeJerk				: LREAL;
	MoveRelativeBufferMode			: MC_BufferMode;
	MoveRelativeOptions				: ST_MoveOptions;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>