<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="MAIN" Id="{0ed01888-47ce-42c9-9b1b-67fc9476a6f3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	X_Axis			: AXIS_REF;
	Y_Axis			: AXIS_REF;
	Z_Axis			: AXIS_REF;
	
	AxisX			: AxisControl;
	AxisY			: AxisControl;
	AxisZ			: AxisControl;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[AxisX(Axis := X_Axis,
	  AxisInputs := Inputs.AxisX_Inputs,
	  Status => Feedback.AxisX_Feedback);
	  
AxisX(Axis := Y_Axis,
	  AxisInputs := Inputs.AxisY_Inputs,
	  Status => Feedback.AxisY_Feedback);
	  
	  
	  
// Enabling the axis x and y
Inputs.AxisX_Inputs.PowerEnable := TRUE;
Inputs.AxisX_Inputs.EnableNegative := TRUE;
Inputs.AxisX_Inputs.EnablePositive := TRUE;
Inputs.AxisX_Inputs.Override := 100;


Inputs.AxisY_Inputs.PowerEnable := TRUE;
Inputs.AxisY_Inputs.EnableNegative := TRUE;
Inputs.AxisY_Inputs.EnablePositive := TRUE;
Inputs.AxisY_Inputs.Override := 100;
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="14" Count="2" />
      <LineId Id="18" Count="1" />
      <LineId Id="17" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="26" Count="0" />
      <LineId Id="28" Count="2" />
      <LineId Id="32" Count="0" />
      <LineId Id="34" Count="1" />
      <LineId Id="37" Count="5" />
      <LineId Id="36" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>